melhorias no comportamento do calculo

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
 		<div class="cal-header">
 			<input class="cal-header-value" type="text" placeholder="0">
+			<div class="last-result"></div>
 		</div>
 
 		<div class="cal-container">
@@ -44,10 +45,6 @@
 					<td><button class="sign" data-result="=">=</button></td>
 				</tr>
 			</table>
-		</div>
-
-		<div class="cal-footer">
-
 		</div>
 	</div>
 
