--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 		</div>
 	</div>
 
-	<script type="text/javascript" src="assets/javascript/zapto.js"></script>
+	<script type="text/javascript" src="assets/javascript/zepto.js"></script>
+	<script type="text/javascript" src="assets/javascript/zepto-touch.js"></script>
 	<script type="text/javascript" src="assets/javascript/scripts.js"></script>
 </body>
 </html>
